@@ -2,7 +2,8 @@ Current development version (0.9.3-SNAPSHOT)
 
 - Fixed parsing of some common C expressions (better tolerates inline functions)
 - Fixed parsing of OpenCL source codes (used by JavaCL Generator project on NativeLibs4Java/JavaCL project)
-- Introduced experimental lightweight structures support.
+- Introduced experimental lightweight structures support (use new "-runtime JNAeratorNL4JStructs" switch)
+- Added automatic import statements generation to make source code smaller and easier to read (use new -noAutoImports switch to disable).
 
 Version 0.9.2 (r886, 20081030):
 
